add -nobuiltin option

--- a/higepos/src/Makefile
+++ b/higepos/src/Makefile
@@ -7,7 +7,7 @@ STRIP      = ${HIGE_TOOLS}/djgpp/bin/strip.exe
 DOXYGEN    = doxygen.exe
 INCLUDE    = include
 LFLAGS     = -Ttext 0x200 --oformat binary
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -Wall -c
+CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c
 BIN        = ../../bin
 LIST       = ../../list
 SCRIPTS    = ${HIGE_TOOLS}/scripts
