--- a/higepos_v1.1/src/Makefile.cygwin
+++ b/higepos_v1.1/src/Makefile.cygwin
@@ -21,7 +21,8 @@ SRC        = higeKernel.cpp       \
              higePureVirtual.cpp  \
              higeOperator.cpp     \
              higeUtil.cpp         \
-             KeyBoardManager.cpp
+             KeyBoardManager.cpp  \
+             FDCDriver.cpp 
 
 HEADER     = ${INCLUDE}/higeKernel.h       \
              ${INCLUDE}/higeVga.h          \
@@ -32,7 +33,8 @@ HEADER     = ${INCLUDE}/higeKernel.h       \
              ${INCLUDE}/higeUtil.h         \
              ${INCLUDE}/higeTypes.h        \
              ${INCLUDE}/KeyBoardManager.h  \
-             ${INCLUDE}/HVector.h
+             ${INCLUDE}/HVector.h          \
+             ${INCLUDE}/FDCDriver.h
 
 OBJ        = ${BIN}/cstart.o           \
              ${BIN}/higeKernel.o       \
@@ -44,7 +46,8 @@ OBJ        = ${BIN}/cstart.o           \
              ${BIN}/higeOperator.o     \
              ${BIN}/higePureVirtual.o  \
              ${BIN}/higeUtil.o         \
-             ${BIN}/KeyBoardManager.o
+             ${BIN}/KeyBoardManager.o  \
+             ${BIN}/FDCDriver.o        \
 
 
 #document
@@ -72,6 +75,7 @@ ${THIRD} : ${SRC} ${HEADER}
 	${CC} -I $(INCLUDE) ${CFLAGS} higeOperator.cpp -o ${BIN}/higeOperator.o
 	${CC} -I $(INCLUDE) ${CFLAGS} higeUtil.cpp -o ${BIN}/higeUtil.o
 	${CC} -I $(INCLUDE) ${CFLAGS} KeyBoardManager.cpp  -o ${BIN}/KeyBoardManager.o
+	${CC} -I $(INCLUDE) ${CFLAGS} FDCDriver.cpp  -o ${BIN}/FDCDriver.o
 	${LD} ${LFLAGS} -o${THIRD} ${OBJ}
 	${NDISASM} -u $@ > ${LIST}/third.list
 	${STRIP}  -O binary ${THIRD}
