--- a/higepos_v1.1/src/Makefile.cygwin
+++ b/higepos_v1.1/src/Makefile.cygwin
@@ -22,7 +22,8 @@ SRC        = higeKernel.cpp       \
              higeOperator.cpp     \
              higeUtil.cpp         \
              KeyBoardManager.cpp  \
-             FDCDriver.cpp 
+             FDCDriver.cpp        \
+             higeTester.cpp
 
 HEADER     = ${INCLUDE}/higeKernel.h       \
              ${INCLUDE}/higeVga.h          \
@@ -34,7 +35,8 @@ HEADER     = ${INCLUDE}/higeKernel.h       \
              ${INCLUDE}/higeTypes.h        \
              ${INCLUDE}/KeyBoardManager.h  \
              ${INCLUDE}/HVector.h          \
-             ${INCLUDE}/FDCDriver.h
+             ${INCLUDE}/FDCDriver.h        \
+             ${INCLUDE}/higeTester.h
 
 OBJ        = ${BIN}/cstart.o           \
              ${BIN}/higeKernel.o       \
@@ -48,7 +50,7 @@ OBJ        = ${BIN}/cstart.o           \
              ${BIN}/higeUtil.o         \
              ${BIN}/KeyBoardManager.o  \
              ${BIN}/FDCDriver.o        \
-
+             ${BIN}/higeTester.o        \
 
 #document
 WEB : ${BIN}/higeboot.bin
@@ -76,6 +78,7 @@ ${THIRD} : ${SRC} ${HEADER}
 	${CC} -I $(INCLUDE) ${CFLAGS} higeUtil.cpp -o ${BIN}/higeUtil.o
 	${CC} -I $(INCLUDE) ${CFLAGS} KeyBoardManager.cpp  -o ${BIN}/KeyBoardManager.o
 	${CC} -I $(INCLUDE) ${CFLAGS} FDCDriver.cpp  -o ${BIN}/FDCDriver.o
+	${CC} -I $(INCLUDE) ${CFLAGS} higeTester.cpp  -o ${BIN}/higeTester.o
 	${LD} ${LFLAGS} -o${THIRD} ${OBJ}
 	${NDISASM} -u $@ > ${LIST}/third.list
 	${STRIP}  -O binary ${THIRD}
