--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -23,7 +23,8 @@ SRC        = monaKernel.cpp       \
              monaUtil.cpp         \
              KeyBoardManager.cpp  \
              FDCDriver.cpp        \
-             monaTester.cpp
+             monaTester.cpp       \
+             ProcessManager.cpp
 
 HEADER     = ${INCLUDE}/monaKernel.h       \
              ${INCLUDE}/monaVga.h          \
@@ -35,7 +36,8 @@ HEADER     = ${INCLUDE}/monaKernel.h       \
              ${INCLUDE}/monaTypes.h        \
              ${INCLUDE}/KeyBoardManager.h  \
              ${INCLUDE}/FDCDriver.h        \
-             ${INCLUDE}/monaTester.h
+             ${INCLUDE}/monaTester.h       \
+             ${INCLUDE}/ProcessManager.h
 
 OBJ        = ${BIN}/cstart.o           \
              ${BIN}/monaKernel.o       \
@@ -50,6 +52,7 @@ OBJ        = ${BIN}/cstart.o           \
              ${BIN}/KeyBoardManager.o  \
              ${BIN}/FDCDriver.o        \
              ${BIN}/monaTester.o       \
+             ${BIN}/ProcessManager.o
 
 # src to html & document
 WEB : ${BIN}/mona.img
@@ -78,6 +81,7 @@ ${THIRD} : ${SRC} ${HEADER}
 	${CC} -I $(INCLUDE) ${CFLAGS} KeyBoardManager.cpp  -o ${BIN}/KeyBoardManager.o
 	${CC} -I $(INCLUDE) ${CFLAGS} FDCDriver.cpp  -o ${BIN}/FDCDriver.o
 	${CC} -I $(INCLUDE) ${CFLAGS} monaTester.cpp  -o ${BIN}/monaTester.o
+	${CC} -I $(INCLUDE) ${CFLAGS} ProcessManager.cpp  -o ${BIN}/ProcessManager.o
 	${LD} ${LFLAGS} -o${THIRD} ${OBJ}
 	${NDISASM} -u $@ > ${LIST}/third.list
 	${STRIP}  -O binary ${THIRD}
