--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -25,7 +25,8 @@ SRC        = monaKernel.cpp       \
              FDCDriver.cpp        \
              monaTester.cpp       \
              ProcessManager.cpp   \
-             monaChecker.cpp
+             monaChecker.cpp      \
+             monaLib.cpp
 
 HEADER     = ${INCLUDE}/monaKernel.h       \
              ${INCLUDE}/monaVga.h          \
@@ -40,6 +41,7 @@ HEADER     = ${INCLUDE}/monaKernel.h       \
              ${INCLUDE}/monaTester.h       \
              ${INCLUDE}/ProcessManager.h   \
              ${INCLUDE}/monaChecker.h      \
+             ${INCLUDE}/monaLib.h          \
 
 
 OBJ        = ${BIN}/cstart.o           \
@@ -56,7 +58,8 @@ OBJ        = ${BIN}/cstart.o           \
              ${BIN}/FDCDriver.o        \
              ${BIN}/monaTester.o       \
              ${BIN}/ProcessManager.o   \
-             ${BIN}/monaChecker.o
+             ${BIN}/monaChecker.o      \
+             ${BIN}/monaLib.o
 
 # src to html & document
 WEB : ${BIN}/mona.img
@@ -87,6 +90,7 @@ ${THIRD} : ${SRC} ${HEADER}
 	${CC} -I $(INCLUDE) ${CFLAGS} monaTester.cpp  -o ${BIN}/monaTester.o
 	${CC} -I $(INCLUDE) ${CFLAGS} ProcessManager.cpp  -o ${BIN}/ProcessManager.o
 	${CC} -I $(INCLUDE) ${CFLAGS} monaChecker.cpp  -o ${BIN}/monaChecker.o
+	${CC} -I $(INCLUDE) ${CFLAGS} monaLib.cpp  -o ${BIN}/monaLib.o
 	${LD} ${LFLAGS} -o${THIRD} ${OBJ}
 	${NDISASM} -u $@ > ${LIST}/third.list
 	${STRIP}  -O binary ${THIRD}
