add staring lib

--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -7,11 +7,16 @@ else
         include linux.env
     endif
 endif
+DOXYGEN    = doxygen
 BIN        = ../bin
 LIST       = ../list
 FIRST      = ${BIN}/firstboot.bin
 SECOND     = ${BIN}/secondboot.bin
 THIRD      = ${BIN}/third.bin
+LIBINCLUDE = lib/include
+LIBSRC     = lib/string.c
+LIBHEADER  = lib/include/string.h
+INCLUDE    = include
 SRC        = monaKernel.cpp       \
              monaVga.cpp          \
              monaIdt.cpp          \
@@ -26,7 +31,6 @@ SRC        = monaKernel.cpp       \
              monaTester.cpp       \
              ProcessManager.cpp   \
              monaChecker.cpp      \
-             monaLib.cpp
 
 HEADER     = ${INCLUDE}/monaKernel.h       \
              ${INCLUDE}/monaVga.h          \
@@ -41,8 +45,6 @@ HEADER     = ${INCLUDE}/monaKernel.h       \
              ${INCLUDE}/monaTester.h       \
              ${INCLUDE}/ProcessManager.h   \
              ${INCLUDE}/monaChecker.h      \
-             ${INCLUDE}/monaLib.h          \
-
 
 OBJ        = ${BIN}/cstart.o           \
              ${BIN}/monaKernel.o       \
@@ -59,9 +61,9 @@ OBJ        = ${BIN}/cstart.o           \
              ${BIN}/monaTester.o       \
              ${BIN}/ProcessManager.o   \
              ${BIN}/monaChecker.o      \
-             ${BIN}/monaLib.o
+             ${BIN}/string.o           \
 
-# src to html & document
+# document
 WEB : ${BIN}/mona.img
 	${DOXYGEN}
 
@@ -74,23 +76,23 @@ ${FIRST} : firstboot.asm boot.mac
 ${SECOND} : secondboot.asm
 	${NASM} secondboot.asm  -o $@ -l ${LIST}/second.list
 
-${THIRD} : ${SRC} ${HEADER}
-	${CC} -I $(INCLUDE) ${CFLAGS} cstart.cpp -o ${BIN}/cstart.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaKernel.cpp -o ${BIN}/monaKernel.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaVga.cpp -o ${BIN}/monaVga.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaIdt.cpp -o ${BIN}/monaIdt.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaIhandler.cpp -o ${BIN}/monaIhandler.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaIo.cpp -o ${BIN}/monaIo.o
-	${CC} -I $(INCLUDE) ${CFLAGS} X86MemoryManager.cpp -o ${BIN}/X86MemoryManager.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaPureVirtual.cpp -o ${BIN}/monaPureVirtual.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaOperator.cpp -o ${BIN}/monaOperator.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaUtil.cpp -o ${BIN}/monaUtil.o
-	${CC} -I $(INCLUDE) ${CFLAGS} KeyBoardManager.cpp  -o ${BIN}/KeyBoardManager.o
-	${CC} -I $(INCLUDE) ${CFLAGS} FDCDriver.cpp  -o ${BIN}/FDCDriver.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaTester.cpp  -o ${BIN}/monaTester.o
-	${CC} -I $(INCLUDE) ${CFLAGS} ProcessManager.cpp  -o ${BIN}/ProcessManager.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaChecker.cpp  -o ${BIN}/monaChecker.o
-	${CC} -I $(INCLUDE) ${CFLAGS} monaLib.cpp  -o ${BIN}/monaLib.o
+${THIRD} : ${SRC} ${HEADER} ${LIBSRC} ${LIBHEADER}
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} cstart.cpp           -o ${BIN}/cstart.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaKernel.cpp       -o ${BIN}/monaKernel.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaVga.cpp          -o ${BIN}/monaVga.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaIdt.cpp          -o ${BIN}/monaIdt.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaIhandler.cpp     -o ${BIN}/monaIhandler.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaIo.cpp           -o ${BIN}/monaIo.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} X86MemoryManager.cpp -o ${BIN}/X86MemoryManager.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaPureVirtual.cpp  -o ${BIN}/monaPureVirtual.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaOperator.cpp     -o ${BIN}/monaOperator.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaUtil.cpp         -o ${BIN}/monaUtil.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} KeyBoardManager.cpp  -o ${BIN}/KeyBoardManager.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} FDCDriver.cpp        -o ${BIN}/FDCDriver.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaTester.cpp       -o ${BIN}/monaTester.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} ProcessManager.cpp   -o ${BIN}/ProcessManager.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} monaChecker.cpp      -o ${BIN}/monaChecker.o
+	${CC} -I $(INCLUDE) -I $(LIBINCLUDE) ${CFLAGS} ./lib/string.c       -o ${BIN}/string.o
 	${LD} ${LFLAGS} -o${THIRD} ${OBJ}
 	${NDISASM} -u $@ > ${LIST}/third.list
 	${STRIP}  -O binary ${THIRD}
