--- a/mona_v1.0/src/cygwin.env
+++ b/mona_v1.0/src/cygwin.env
@@ -4,4 +4,11 @@ CC         = /usr/bin/g++
 LD         = /usr/bin/ld
 STRIP      = /usr/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DBUILD_ON_LINUX
+# for gcc2.95@cygwin
+#CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DBUILD_ON_LINUX
+
+# for gcc3.2@cygwin with memory debug
+#CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DMONA_DEBUG_MM
+
+## for gcc3.2@cygwin
+CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c
