--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -34,7 +34,8 @@ SOURCES    = cstart.cpp            \
              ProcessManager.cpp    \
              monaChecker.cpp       \
              string.cpp            \
-             SystemInfo.cpp
+             SystemInfo.cpp        \
+             Semaphore.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
