--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -1,6 +1,6 @@
 NASM       = nasmw
 NDISASM    = ndisasmw
-CC         = /usr/bin/g++
+CC         = /usr/bin/g++ -S
 LD         = /usr/bin/ld
 STRIP      = /usr/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static
