--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -1,5 +1,5 @@
-NASM       = nasmw
-NDISASM    = ndisasmw
+NASM       = nasm
+NDISASM    = ndisasm
 CC         = /usr/bin/g++
 LD         = /usr/bin/ld
 STRIP      = /usr/bin/strip
