--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -11,4 +11,4 @@ LFLAGS     = -n -Ttext 0x1200 -static
 #CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DMONA_DEBUG_MM
 
 ## for gcc3.2@cygwin
-CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall -O2
+CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall
