--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -27,7 +27,7 @@ SOURCES    = cstart.cpp            \
              operator.cpp          \
              monaPureVirtual.cpp   \
              KeyBoardManager.cpp   \
-             monaTester.cpp        \
+             tester.cpp            \
              ProcessManager.cpp    \
              checker.cpp           \
              string.cpp            \
