--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -25,7 +25,7 @@ SOURCES    = cstart.cpp            \
              monaIhandler.cpp      \
              IA32MemoryManager.cpp \
              operator.cpp          \
-             monaPureVirtual.cpp   \
+             purevirtual.cpp       \
              KeyBoardManager.cpp   \
              tester.cpp            \
              ProcessManager.cpp    \
