add BitMap Class

--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -40,7 +40,8 @@ SOURCES    = cstart.cpp            \
              io.cpp                \
              rtc.cpp               \
              disp.cpp              \
-             syscalls.cpp
+             syscalls.cpp          \
+             BitMap.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
