commit for diff

--- a/mona_v1.0/tools/Makefile
+++ b/mona_v1.0/tools/Makefile
@@ -1,2 +1,2 @@
-all: fstest.cpp DiskDriver.cpp
-	g++ -I-../src/include -o test.exe fstest.cpp DiskDriver.cpp ../src/FAT12.cpp
+all: fstest.cpp DiskDriver.cpp ../src/FAT12.cpp ../src/include/FAT12.h
+	g++ -o test.exe -c fstest.cpp -idirafter ../src/include
